assets/css/main.css
/* ... */
.gallery article:nth-last-child(19n) {
  -moz-transition-delay: 0.9s;
  -webkit-transition-delay: 0.9s;
  -ms-transition-delay: 0.9s;
  transition-delay: 0.9s;
}

.gallery article:nth-last-child(19n) {
  -moz-transition-delay: 0.95s;
  -webkit-transition-delay: 0.95s;
  -ms-transition-delay: 0.95s;
  transition-delay: 0.95s;
}

.gallery article:nth-last-child(20n) {
  -moz-transition-delay: 0.95s;
  -webkit-transition-delay: 0.95s;
  -ms-transition-delay: 0.95s;
  transition-delay: 0.95s;
}

.gallery article:nth-last-child(20n) {
  -moz-transition-delay: 1s;
  -webkit-transition-delay: 1s;
  -ms-transition-delay: 1s;
  transition-delay: 1s;
}

.gallery article:nth-last-child(21n) {
  -moz-transition-delay: 1s;
  -webkit-transition-delay: 1s;
  -ms-transition-delay: 1s;
  transition-delay: 1s;
}

.gallery article:nth-last-child(21n) {
  -moz-transition-delay: 1.05s;
  -webkit-transition-delay: 1.05s;
  -ms-transition-delay: 1.05s;
  transition-delay: 1.05s;
}

.gallery article:nth-last-child(22n) {
  -moz-transition-delay: 1.05s;
  -webkit-transition-delay: 1.05s;
  -ms-transition-delay: 1.05s;
  transition-delay: 1.05s;
}

.gallery article:nth-last-child(22n) {
  -moz-transition-delay: 1.1s;
  -webkit-transition-delay: 1.1s;
  -ms-transition-delay: 1.1s;
  transition-delay: 1.1s;
}

.gallery article:nth-last-child(23n) {
  -moz-transition-delay: 1.1s;
  -webkit-transition-delay: 1.1s;
  -ms-transition-delay: 1.1s;
  transition-delay: 1.1s;
}

.gallery article:nth-last-child(23n) {
  -moz-transition-delay: 1.15s;
  -webkit-transition-delay: 1.15s;
  -ms-transition-delay: 1.15s;
  transition-delay: 1.15s;
}

.gallery article:nth-last-child(24n) {
  -moz-transition-delay: 1.15s;
  -webkit-transition-delay: 1.15s;
  -ms-transition-delay: 1.15s;
  transition-delay: 1.15s;
}

.gallery.inactive article {
  opacity: 0;
}

.gallery.inactive article.from-left {
  -moz-transform: translateX(-14em);
  -webkit-transform: translateX(-14em);
  -ms-transform: translateX(-14em);
  transform: translateX(-14em);
}

.gallery.inactive article.from-right {
  -moz-transform: translateX(14em);
  -webkit-transform: translateX(14em);
  -ms-transform: translateX(14em);
  transform: translateX(14em);
}

.gallery.inactive article.from-top {
  -moz-transform: translateY(-7em);
  -webkit-transform: translateY(-7em);
  -ms-transform: translateY(-7em);
  transform: translateY(-7em);
}

.gallery.inactive article.from-bottom {
  -moz-transform: translateY(7em);
  -webkit-transform: translateY(7em);
  -ms-transform: translateY(7em);
  transform: translateY(7em);
}

@media screen and (max-width: 480px) {
  .gallery {
    -moz-flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .gallery article {
    width: 100%;
  }
}

/* Header */

#header {
  position: fixed;
  z-index: 10000;
  left: 0;
  top: 0;
  width: 100%;
  background: rgba(255, 255, 255, 0.95);
  height: 3em;
  line-height: 3em;
  box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
}

#header h1 {
  position: absolute;
  left: 1em;
  top: 0;
  height: 3em;
  line-height: 3em;
  cursor: default;
}

#header h1 a {
  font-size: 1.25em;
}

#header nav {
  position: absolute;
  right: 0.5em;
  top: 0;
  height: 3em;
  line-height: 3em;
}

#header nav ul {
  margin: 0;
}

#header nav ul li {
  display: inline-block;
  margin-left: 0.5em;
  font-size: 0.9em;
}

#header nav ul li a {
  display: block;
  color: inherit;
  text-decoration: none;
  height: 3em;
  line-height: 3em;
  padding: 0 0.5em 0 0.5em;
  outline: 0;
}

@media screen and (max-width: 736px) {
  #header {
    height: 2.5em;
    line-height: 2.5em;
  }

  #header h1 {
    text-align: center;
    position: relative;
    left: 0;
    top: 0;
    height: 2.5em;
    line-height: 2.5em;
  }

  #header h1 a {
    font-size: 1em;
  }

  #header nav {
    display: none;
  }
}

body {
  padding-top: 3em;
}

@media screen and (max-width: 736px) {
  body {
    padding-top: 2.5em;
  }
}

/* Main */

.main {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  position: relative;
  margin: 0;
  overflow-x: hidden;
}

.main > .content {
  /* width: 45em; */
  max-width: calc(100% - 4em);
  margin: 0 auto;
}

.main > .content > :last-child {
  margin-bottom: 0;
}

.main.fullscreen {
  min-height: 100%;
}

.main.style1 {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
  text-align: center;
  padding: 3em 0 3em 0;
}

.main.style1 h2 {
  font-size: 4.25em;
  line-height: 1em;
}

.main.style1 > .content {
  -moz-transition: opacity 1s ease;
  -webkit-transition: opacity 1s ease;
  -ms-transition: opacity 1s ease;
  transition: opacity 1s ease;
  -moz-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  opacity: 1;
  margin: 0;
}

.main.style1.inactive > .content {
  opacity: 0;
}

.main.style2 {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
  padding: 3em 0 3em 0;
  overflow: hidden;
}

.main.style2 > .content {
  -moz-transition: -moz-transform 1s ease;
  -webkit-transition: -webkit-transform 1s ease;
  -ms-transition: -ms-transform 1s ease;
  transition: transform 1s ease;
  -moz-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  position: relative;
  width: 35%;
  margin: 0;
}
/* ... */

